--- a/visualbranding/web/step4a/slider.html
+++ b/visualbranding/web/step4a/slider.html
@@ -242,7 +242,7 @@
 			data-whitespace="nowrap"
  
             data-type="shape" 
-			data-actions='[{"event":"click","action":"simplelink","target":"_self","url":"..\/steph2","delay":""}]'
+			data-actions='[{"event":"click","action":"simplelink","target":"_self","url":"..\/stepf2","delay":""}]'
 			data-responsive_offset="on" 
 
             data-frames='[{"delay":0,"speed":2000,"sfxcolor":"#ffffff","sfx_effect":"blockfromleft","frame":"0","from":"z:0;","to":"o:1;","ease":"Power4.easeInOut"},{"delay":"wait","speed":330,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
@@ -264,7 +264,7 @@
 			data-whitespace="nowrap"
  
             data-type="image" 
-			data-actions='[{"event":"click","action":"simplelink","target":"_self","url":"..\/steph2","delay":""}]'
+			data-actions='[{"event":"click","action":"simplelink","target":"_self","url":"..\/stepf2","delay":""}]'
 			data-responsive_offset="on" 
 
             data-frames='[{"delay":0,"speed":2010,"sfxcolor":"#ffffff","sfx_effect":"blockfromright","frame":"0","from":"z:0;","to":"o:1;","ease":"Power4.easeInOut"},{"delay":"wait","speed":330,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
@@ -286,7 +286,7 @@
 			data-whitespace="nowrap"
  
             data-type="text" 
-			data-actions='[{"event":"click","action":"simplelink","target":"_self","url":"..\/steph2","delay":""}]'
+			data-actions='[{"event":"click","action":"simplelink","target":"_self","url":"..\/stepf2","delay":""}]'
 			data-responsive_offset="on" 
 
             data-frames='[{"delay":0,"speed":1520,"frame":"0","from":"y:[-100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;","mask":"x:0px;y:0px;s:inherit;e:inherit;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":330,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
