--- a/visualbranding/web/steph2/slider.html
+++ b/visualbranding/web/steph2/slider.html
@@ -409,13 +409,13 @@
 		<p class="tp-caption   tp-resizeme" 
 			 id="slide-104-layer-42" 
 			 data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']" 
-			 data-y="['middle','middle','middle','middle']" data-voffset="['661','661','661','661']" 
+			 data-y="['middle','middle','middle','middle']" data-voffset="['662','662','662','662']" 
 						data-width="648"
 			data-height="none"
 			data-whitespace="normal"
  
             data-type="text" 
-			data-actions='[{"event":"click","action":"simplelink","target":"_self","url":"..\/finalj81","delay":""}]'
+			data-actions='[{"event":"click","action":"simplelink","target":"_self","url":"..\/finalb22-2","delay":""}]'
 			data-responsive_offset="on" 
 
             data-frames='[{"delay":0,"speed":2000,"sfxcolor":"#ffffff","sfx_effect":"blockfromright","frame":"0","from":"z:0;","to":"o:1;","ease":"Power4.easeInOut"},{"delay":"wait","speed":330,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
@@ -603,13 +603,13 @@
 		<div class="tp-caption   tp-resizeme" 
 			 id="slide-104-layer-60" 
 			 data-x="['left','left','left','left']" data-hoffset="['143','143','143','143']" 
-			 data-y="['top','top','top','top']" data-voffset="['1624','1624','1624','1624']" 
+			 data-y="['top','top','top','top']" data-voffset="['1623','1623','1623','1623']" 
 						data-width="none"
 			data-height="none"
 			data-whitespace="nowrap"
  
             data-type="image" 
-			data-actions='[{"event":"click","action":"simplelink","target":"_self","url":"..\/finalj81","delay":""}]'
+			data-actions='[{"event":"click","action":"simplelink","target":"_self","url":"..\/finalb22-2","delay":""}]'
 			data-responsive_offset="on" 
 
             data-frames='[{"delay":0,"speed":2000,"sfxcolor":"#ffffff","sfx_effect":"blockfromright","frame":"0","from":"z:0;","to":"o:1;","ease":"Power4.easeInOut"},{"delay":"wait","speed":310,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
