--- a/visualbranding/web/steph2/slider.html
+++ b/visualbranding/web/steph2/slider.html
@@ -415,7 +415,7 @@
 			data-whitespace="normal"
  
             data-type="text" 
-			data-actions='[{"event":"click","action":"simplelink","target":"_self","url":"..\/finalb22-2","delay":""}]'
+			data-actions='[{"event":"click","action":"simplelink","target":"_self","url":"http:\/\/localhost:8080\/visualbranding\/encender?index=7&url=finalb22-2","delay":""}]'
 			data-responsive_offset="on" 
 
             data-frames='[{"delay":0,"speed":2000,"sfxcolor":"#ffffff","sfx_effect":"blockfromright","frame":"0","from":"z:0;","to":"o:1;","ease":"Power4.easeInOut"},{"delay":"wait","speed":330,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
@@ -609,7 +609,7 @@
 			data-whitespace="nowrap"
  
             data-type="image" 
-			data-actions='[{"event":"click","action":"simplelink","target":"_self","url":"..\/finalb22-2","delay":""}]'
+			data-actions='[{"event":"click","action":"simplelink","target":"_self","url":"http:\/\/localhost:8080\/visualbranding\/encender?index=7&url=finalb22-2","delay":""}]'
 			data-responsive_offset="on" 
 
             data-frames='[{"delay":0,"speed":2000,"sfxcolor":"#ffffff","sfx_effect":"blockfromright","frame":"0","from":"z:0;","to":"o:1;","ease":"Power4.easeInOut"},{"delay":"wait","speed":310,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
